examples/test/testpolicy27.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy27
  namespace: namespace325
spec:
  podSelector:
    matchLabels:
      key8: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value2
          key11: value43
          key32: value16
      podSelector:
        matchLabels:
          key40: value42
          key35: value30
